test/errors/value/io/open2.yasl
let f = io.open('f', 'y+')
